Modified TypeOfService logic